<resources>
    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="customer_care_string">Customer Care</string>
    <string name="payment_options_string">Payment Options</string>
    <string name="reviews_string">Reviews</string>
    <string name="delete_account_string">Delete Account</string>
    <string name="next_string">NEXT</string>
    <string name="_986238999_string">986238999</string>
    <string name="service_history_string">Service History</string>
    <string name="log_out_string"><u>Log out</u></string>
    <string name="home_string">Home</string>
    <string name="notification_string">Notification</string>
    <string name="call_string">Call</string>
    <string name="setting_string">Setting</string>
    <string name="support_ek3_string">Support</string>
    <string name="about_us_string">About Us</string>
    <string name="terms_and_condition_string">Terms and Condition</string>
    <string name="contact_us_string">Contact Us</string>
    <string name="privacy_policy_string">Privacy Policy</string>
    <string name="_25__discount_on_oil_change__string">  25%  Discount on Oil Change.</string>
    <string name="your_vehiche_is_on_bayarea__string"> Your Vehiche is On BayArea.</string>
    <string name="notification_ek1_string">Notification</string>
    <string name="your_vehicle_is_ready_to_pickup__string">  Your Vehicle Is Ready To PickUp.</string>
    <string name="home_ek1_string">Home</string>
    <string name="notification_ek3_string">Notification</string>
    <string name="call_ek2_string">Call</string>
    <string name="setting_ek1_string">Setting</string>
    <string name="_25__discount_on_oil_change__ek1_string">  25%  Discount on Oil Change.</string>
    <string name="your_vehiche_is_on_bayarea__ek1_string"> Your Vehiche is On BayArea.</string>
    <string name="notification_ek7_string">Notification</string>
    <string name="_mark_all_as_read_string">Mark All As Read</string>
    <string name="your_vehicle_is_ready_to_pickup__ek1_string">  Your Vehicle Is Ready To PickUp.</string>
    <string name="home_ek2_string">Home</string>
    <string name="notification_ek9_string">Notification</string>
    <string name="call_ek3_string">Call</string>
    <string name="setting_ek2_string">Setting</string>
    <string name="will_i_receive_reminders_for_upcoming_services__string">Will I receive reminders for upcoming services?</string>
    <string name="can_i_manage_multiple_vehicles_with_one_account___string"> Can I manage multiple vehicles with one account?.</string>
    <string name="faqs_string">FAQs</string>
    <string name="can_i_cancel_a_service_order__string">Can I cancel a service Order?</string>
    <string name="home_ek3_string">Home</string>
    <string name="notification_ek10_string">Notification</string>
    <string name="call_ek4_string">Call</string>
    <string name="setting_ek3_string">Setting</string>
    <string name="settings_ek3_string">Settings</string>
    <string name="faqs_ek1_string">FAQS</string>
    <string name="mode_string">Mode</string>
    <string name="share_string">Share</string>
    <string name="write_a_review_string">Write a Review</string>
    <string name="feedback_string">FeedBack</string>
    <string name="change_password_string">Change Password</string>
    <string name="support_ek4_string">Support</string>
    <string name="home_ek4_string">Home</string>
    <string name="notification_ek11_string">Notification</string>
    <string name="call_ek5_string">Call</string>
    <string name="setting_ek4_string">Setting</string>
    <string name="garage_doc_string">Garage Doc</string>
    <string name="ca_string">Ca</string>
    <string name="pending_string">Pending</string>
    <string name="process_string">Process</string>
    <string name="delivered_string">Delivered</string>
    <string name="cancelled_string">Cancelled</string>
    <string name="home_ek5_string">Home</string>
    <string name="notification_ek12_string">Notification</string>
    <string name="call_ek6_string">Call</string>
    <string name="setting_ek5_string">Setting</string>
    <string name="address_street_name_string">Address/Street            Name</string>
    <string name="choose_from_map_string">Choose From Map</string>
    <string name="confirm_location_string">Confirm Location</string>
    <string name="contact_details_string">Contact Details</string>
    <string name="home_ek6_string">Home</string>
    <string name="notification_ek13_string">Notification</string>
    <string name="call_ek7_string">Call</string>
    <string name="setting_ek6_string">Setting</string>
    <string name="garage_doc_ek1_string">Garage Doc</string>
    <string name="bike_details_string">Bike Details</string>
    <string name="bike_model__string">Bike Model:</string>
    <string name="number_plate__string">Number plate:</string>
    <string name="choose_bike_color__string">Choose bike color:</string>
    <string name="black_string">Black</string>
    <string name="blue_string">Blue</string>
    <string name="red_string">Red</string>
    <string name="orange_string">Orange</string>
    <string name="home_ek7_string">Home</string>
    <string name="notification_ek14_string">Notification</string>
    <string name="call_ek8_string">Call</string>
    <string name="setting_ek7_string">Setting</string>
    <string name="done_string">Done</string>
    <string name="ca_ek1_string">Ca</string>
    <string name="garage_doc_ek2_string">Garage Doc</string>
    <string name="yamaha_alpha_string">Yamaha Alpha</string>
    <string name="yamaha_fascino_string">Yamaha Fascino</string>
    <string name="yamaha_mt_15_string">Yamaha Mt-15</string>
    <string name="yamaha_fzs_string">Yamaha Fzs</string>
    <string name="home_ek8_string">Home</string>
    <string name="notification_ek15_string">Notification</string>
    <string name="call_ek9_string">Call</string>
    <string name="setting_ek8_string">Setting</string>
    <string name="payment_methods_string">PAYMENT METHODS</string>
    <string name="esewa_string">Esewa</string>
    <string name="khalti_string">Khalti</string>
    <string name="ime_pay_string">IME Pay</string>
    <string name="bank_string">Bank</string>
    <string name="cash_on_delivery_string">Cash on Delivery</string>
    <string name="next_ek1_string">NEXT</string>
    <string name="home_ek9_string">Home</string>
    <string name="notification_ek16_string">Notification</string>
    <string name="call_ek10_string">Call</string>
    <string name="setting_ek9_string">Setting</string>
    <string name="_10_59_string">10:59</string>
    <string name="name__string">Name:</string>
    <string name="drop_vehicle_to_my_location__string">Drop vehicle to my location.</string>
    <string name="receipt_ek3_string">Receipt</string>
    <string name="bill_no__string">Bill No:</string>
    <string name="date__string">Date:</string>
    <string name="vehicle_name__string">Vehicle Name:</string>
    <string name="home_ek10_string">Home</string>
    <string name="notification_ek17_string">Notification</string>
    <string name="call_ek11_string">Call</string>
    <string name="setting_ek10_string">Setting</string>
    <string name="ca_ek2_string">Ca</string>
    <string name="vehicle_details__string">Vehicle Details:</string>
    <string name="vehicle_number__string">Vehicle Number:</string>
    <string name="text_string">Part Name</string>
    <string name="text_ek1_string"> Price</string>
    <string name="text_ek2_string">Remarks</string>
    <string name="text_ek3_string">1.Brake</string>
    <string name="text_ek4_string">Rs.200       </string>
    <string name="text_ek6_string">2.</string>
    <string name="text_ek7_string">Rs.300       </string>
    <string name="text_ek9_string">3.</string>
    <string name="text_ek10_string">Rs.500       </string>
    <string name="text_ek12_string">Total Amount</string>
    <string name="hhhh_string">Rs.1000</string>
    <string name="text_ek13_string"></string>
    <string name="text_ek14_string">Part Name</string>
    <string name="text_ek15_string"> Price</string>
    <string name="text_ek16_string">Remarks</string>
    <string name="text_ek17_string">1.Tyre</string>
    <string name="text_ek18_string">Rs.400       </string>
    <string name="text_ek20_string">2.</string>
    <string name="text_ek21_string">Rs.300       </string>
    <string name="text_ek23_string">3.</string>
    <string name="text_ek24_string">Rs.500       </string>
    <string name="text_ek26_string">Total Amount</string>
    <string name="hhhh_ek1_string">Rs.12000</string>
    <string name="text_ek27_string"></string>
    <string name="cancelled_ek1_string">Cancelled</string>
    <string name="pending_ek1_string">Pending</string>
    <string name="process_ek1_string">Process</string>
    <string name="delivered_ek1_string">Delivered</string>
    <string name="add_part_name___services_string">Add Part Name / Services</string>
    <string name="changes_to_be_made_from_showroom_side_string">Changes to be made from showroom side</string>
    <string name="pay_string">Pay</string>
    <string name="home_ek11_string">Home</string>
    <string name="notification_ek18_string">Notification</string>
    <string name="call_ek12_string">Call</string>
    <string name="setting_ek11_string">Setting</string>
    <string name="choose_from_map_ek1_string">CHOOSE FROM MAP</string>
    <string name="confirm_location_ek1_string">Confirm Location</string>
    <string name="address_street_name_ek1_string">ADDRESS/STREET NAME</string>
    <string name="home_ek12_string">Home</string>
    <string name="notification_ek19_string">Notification</string>
    <string name="call_ek13_string">Call</string>
    <string name="setting_ek12_string">Setting</string>
    <string name="do_you_want_pickup_service__string">   Do you want pickup Service?</string>
    <string name="take_token_string">Take token</string>
    <string name="choose_token_string">Choose token</string>
    <string name="_10_20_string">10.20</string>
    <string name="_11_00_string">11.00</string>
    <string name="_11_20_string">11.20</string>
    <string name="_11_40_string">11.40</string>
    <string name="_12_00_string">12.00</string>
    <string name="_1_00_string">1.00</string>
    <string name="_1_20_string">1.20</string>
    <string name="confirm_string">Confirm</string>
    <string name="_1_40_string">1.40</string>
    <string name="_12_20_string">12.20</string>
    <string name="_12_40_string">12.40</string>
    <string name="_10_00_string">10.00</string>
    <string name="_10_40_string">10.40</string>
    <string name="choose_parts_string">Choose Parts</string>
    <string name="confirm_ek1_string">Confirm </string>
    <string name="_10_59_ek1_string">10:59</string>
    <string name="garage_doc_ek4_string">Garage Doc</string>
    <string name="_1__string">1.</string>
    <string name="mt_15__yamaha_last_serviced__2012_12_10__string">MT-15, Yamaha Last serviced (2012-12-10)</string>
    <string name="add_vehicles_string">Add Vehicles</string>
    <string name="home_ek15_string">Home</string>
    <string name="notification_ek22_string">Notification</string>
    <string name="call_ek16_string">Call</string>
    <string name="setting_ek15_string">Setting</string>
    <string name="enter_your_full_name_ek1_string">Enter  your full name</string>
    <string name="enter_your_email_ek1_string">Enter Your Email</string>
    <string name="enter_your_phone_number_string">Enter your phone number</string>
    <string name="address_string">Address</string>
    <string name="birthday_string">Birthday</string>
    <string name="gender_string">Gender</string>
    <string name="finish_string">FINISH</string>
    <string name="please_enter_accurate_data_so_we_can_best_serve_you______string">Please enter accurate data so we can best serve you!!!!!</string>
    <string name="lets_get_started_string">Lets get started</string>
</resources>