<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		extra_page_
	 *	@date 		Monday 17th of June 2024 06:12:58 PM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/info" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



















			<RelativeLayout android:id="@+id/page_info_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__info_ek2"
					android:background="@drawable/_bg__info_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="800dp" />

				<View   android:id="@+id/rectangle_18"
					android:background="@drawable/rectangle_18_shape"
					 android:layout_marginStart="15dp"
					android:layout_marginTop="211dp"
					android:layout_width="330dp"
					android:layout_height="60dp" />

				<TextView android:id="@+id/enter_your_full_name_ek1"
					android:fontFamily="Poppins"
					android:alpha="0.6"
					 android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="226dp"
					android:layout_width="230dp"
					android:layout_height="44dp"
					android:text="@string/enter_your_full_name_ek1_string"
					 />

				<View   android:id="@+id/rectangle_19"
					android:background="@drawable/rectangle_19_shape"
					 android:layout_marginStart="15dp"
					android:layout_marginTop="282dp"
					android:layout_width="330dp"
					android:layout_height="60dp" />

				<TextView android:id="@+id/enter_your_email_ek1"
					android:fontFamily="Poppins"
					android:alpha="0.6"
					 android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="297dp"
					android:layout_width="185dp"
					android:layout_height="44dp"
					android:text="@string/enter_your_email_ek1_string"
					 />

				<View   android:id="@+id/rectangle_20"
					android:background="@drawable/rectangle_20_shape"
					 android:layout_marginStart="15dp"
					android:layout_marginTop="352dp"
					android:layout_width="330dp"
					android:layout_height="60dp" />

				<TextView android:id="@+id/enter_your_phone_number"
					android:fontFamily="Poppins"
					android:alpha="0.6"
					 android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="367dp"
					android:layout_width="280dp"
					android:layout_height="44dp"
					android:text="@string/enter_your_phone_number_string"
					 />

				<View   android:id="@+id/rectangle_24"
					android:background="@drawable/rectangle_24_shape"
					 android:layout_marginStart="15dp"
					android:layout_marginTop="423dp"
					android:layout_width="330dp"
					android:layout_height="60dp" />

				<TextView android:id="@+id/address"
					android:fontFamily="Poppins"
					android:alpha="0.6"
					 android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="438dp"
					android:layout_width="107dp"
					android:layout_height="44dp"
					android:text="@string/address_string"
					 />

				<View   android:id="@+id/rectangle_21"
					android:background="@drawable/rectangle_21_shape"
					 android:layout_marginStart="15dp"
					android:layout_marginTop="494dp"
					android:layout_width="160dp"
					android:layout_height="60dp" />

				<TextView android:id="@+id/birthday"
					android:fontFamily="Poppins"
					android:alpha="0.6"
					 android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="509dp"
					android:layout_width="109dp"
					android:layout_height="44dp"
					android:text="@string/birthday_string"
					 />

				<View   android:id="@+id/rectangle_22"
					android:background="@drawable/rectangle_22_shape"
					 android:layout_marginStart="185dp"
					android:layout_marginTop="494dp"
					android:layout_width="160dp"
					android:layout_height="60dp" />

				<TextView android:id="@+id/gender"
					android:fontFamily="Poppins"
					android:alpha="0.6"
					 android:textSize="20sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginLeft="207dp"
					android:layout_marginTop="509dp"
					android:layout_width="100dp"
					android:layout_height="44dp"
					android:text="@string/gender_string"
					 />

				<View   android:id="@+id/_rectangle_25"
					android:background="@drawable/_rectangle_25_shape"
					 android:layout_marginStart="23dp"
					android:layout_marginTop="666dp"
					android:layout_width="316dp"
					android:layout_height="45dp" />

				<TextView android:id="@+id/finish"
					android:fontFamily="Poppins"
					android:textStyle="bold"
					android:textSize="24sp"
					android:textColor="@color/_bg__extra_page__ek2_color"
					android:layout_marginLeft="143dp"
					android:layout_marginTop="671dp"
					android:layout_width="105dp"
					android:layout_height="53dp"
					android:text="@string/finish_string"
					 />

				<TextView android:id="@+id/please_enter_accurate_data_so_we_can_best_serve_you_____"
					android:fontFamily="Poppins"
					android:textSize="15sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="143dp"
					android:layout_width="381.5dp"
					android:layout_height="57.5dp"
					android:text="@string/please_enter_accurate_data_so_we_can_best_serve_you______string"
					 />

				<TextView android:id="@+id/lets_get_started"
					android:fontFamily="Poppins"
					android:textSize="24sp"
					android:textColor="@color/rectangle_1_color"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="89dp"
					android:layout_width="215dp"
					android:layout_height="53dp"
					android:text="@string/lets_get_started_string"
					 />

			</RelativeLayout>












		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>